--- a/learn/templates/index.html
+++ b/learn/templates/index.html
@@ -285,7 +285,7 @@
                                 <h3>编程语言历年书本数目统计</h3>
                                 <div  id="p2_s1_show" style="position:relative;left:10%;width:80%;height:80%">
                                 </div>
-                                <button class="md-close" style="position: fixed;border-radius: 10px;font-size: 0.1em;background: #c0392b;">Close</button>
+                                <button class="md-close" style="position: relative;border-radius: 10px;font-size: 0.1em;background: #c0392b;">Close</button>
                             </div>
 
                         </div>
@@ -297,14 +297,13 @@
                     <div class="md-content" style="position:absolute;width:100%;height:100%;">
                         <div class="md-content" style="position:absolute;width:100%;height:100%;min-height:500px;background: rgba(0,0,0,0.5);">
                             <div style="position:relative;left:20%;width:60%;height:85%;">
-                                <button class="md-close">Close</button>
-                                <h3>作者国籍雷达图</h3>
+                                <h3>历年热门标签占比</h3>
                                 <div  id="p2_s2_show" style="position:relative;left:10%;width:80%;height:80%">
 
                                 </div>
-
+                                
                             </div>
-
+                            <button class="md-close" style="position: relative;border-radius: 10px;font-size: 0.1em;background: #c0392b;">Close</button>
                         </div>
 
                     </div>
@@ -313,16 +312,53 @@
                     <div class="md-content" style="position:absolute;width:100%;height:100%;">
                         <div class="md-content" style="position:absolute;width:100%;height:100%;min-height:500px;background: rgba(0,0,0,0.5);">
                             <div style="position:relative;left:20%;width:60%;height:800px;">
-                                <h3>作者国籍雷达图</h3>
-                                <div  id="tanchu" style="position:relative;left:10%;width:80%;height:80%"></div>
-                                <button class="md-close">Close</button>
+                                <h3>作者国籍占比饼图</h3>
+                                <div  id="p2_x1_show" style="position:relative;left:10%;width:80%;height:80%"></div>
                             </div>
-
+                            <button class="md-close" style="position: relative;border-radius: 10px;font-size: 0.1em;background: #c0392b;">Close</button>
                         </div>
 
                     </div>
                 </div>
+                <div class="md-modal md-effect-1" id="modal-4">
+                    <div class="md-content" style="position:absolute;width:100%;height:100%;">
+                        <div class="md-content" style="position:absolute;width:100%;height:100%;min-height:500px;background: rgba(0,0,0,0.5);">
+                            <div style="position:relative;left:20%;width:60%;height:800px;">
+                                <h3>作者国籍雷达图</h3>
+                                <div  id="p2_z1_show" style="position:relative;left:10%;width:80%;height:80%"></div>
+                                
+                            </div>
+                            <button class="md-close" style="position: relative;border-radius: 10px;font-size: 0.1em;background: #c0392b;">Close</button>
+                        </div>
 
+                    </div>
+                </div>
+                <div class="md-modal md-effect-1" id="modal-5">
+                    <div class="md-content" style="position:absolute;width:100%;height:100%;">
+                        <div class="md-content" style="position:absolute;width:100%;height:100%;min-height:500px;background: rgba(0,0,0,0.5);">
+                            <div style="position:relative;left:20%;width:60%;height:800px;">
+                                <h3>不同评分下基本信息对比</h3>
+                                <div  id="p2_x2_show" style="position:relative;left:10%;width:80%;height:80%"></div>
+                                
+                            </div>
+                            <button class="md-close" style="position: relative;border-radius: 10px;font-size: 0.1em;background: #c0392b;">Close</button>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="md-modal md-effect-1" id="modal-6">
+                    <div class="md-content" style="position:absolute;width:100%;height:100%;">
+                        <div class="md-content" style="position:absolute;width:100%;height:100%;min-height:500px;background: rgba(0,0,0,0.5);">
+                            <div style="position:relative;left:20%;width:60%;height:800px;">
+                                <h3>不同评分下已读、想读、在读人数</h3>
+                                <div  id="p2_x3_show" style="position:relative;left:10%;width:80%;height:80%"></div>
+                                
+                            </div>
+                            <button class="md-close" style="position: relative;border-radius: 10px;font-size: 0.1em;background: #c0392b;">Close</button>
+                        </div>
+
+                    </div>
+                </div>
                 <div class="container" style="position:absolute;width:100%;height:100%;">
                     <div class="column" style="position:absolute;top:9%;left:25%;">
                         <button class="md-trigger" data-modal="modal-1" style="position:absolute;background: #848FFD;border-radius: 10px;font-size: 0.005em;z-index: 1000;">Show</button>
@@ -410,7 +446,7 @@
                                         <h3 class="ui header" href="{{ i.url }}">{{ i.title }}</h3>
                                     </a>
                                     <p>作者：{{ i.author }} / 出版社：{{ i.press }} / 评分：{{ i.score }} / 评分人数：{{ i.number }}</p>
-                                    <p>短评情感指数：</p>
+                                    <p>短评情感指数：{{ i.emotion }}</p>
                                     <div class="extra">
                                         {% for tag in i.label %}
                                         <div class="ui brown label">
@@ -610,51 +646,55 @@ if (option && typeof option === "object") {
 </script>
 
 <script type="text/javascript">
-    var dom = document.getElementById("tanchu");
-    var myChart = echarts.init(dom,'walden');
-    var app = {};
-    option = null;
-    option = {
-        tooltip: {},
-        legend: {
-            x: 'left',
-            data: ['预算分配']
-        },
-        radar: {
-                    // shape: 'circle',
-                    name: {
-                        textStyle: {
-                            color: '#fff',
-                            backgroundColor: '#999',
-                            borderRadius: 3,
-                            padding: [3, 5]
-                        }
-                    },
-                    indicator: [
-                    { name: '美国', max: 5000},
-                    { name: '法国', max: 5000},
-                    { name: '英国', max: 1000},
-                    { name: '中国', max: 5000},
-                    { name: '德国', max: 1000},
-                    { name: '日本', max: 1000}
-                    ]
-                },
-                series: [{
-                    name: '预算 vs 开销（Budget vs spending）',
-                    type: 'radar',
-                    // areaStyle: {normal: {}},
-                    data : [
-                    {
-                        value : [4604, 125, 465, 4108, 92, 284],
-                        name : '作者数量'
-                    }
-                    ]
-                }]
-            };;
-            if (option && typeof option === "object") {
-                myChart.setOption(option, true);
+var dom = document.getElementById("p2_x1_show");
+var myChart = echarts.init(dom, 'walden');
+var app = {};
+option = null;
+option = {
+    title : {
+        x:'center'
+    },
+    tooltip : {
+        trigger: 'item',
+        formatter: "{a} <br/>{b} : {c} ({d}%)"
+    },
+    legend: {
+        orient: 'vertical',
+        left: 'left',
+        data: [
+        {% for i in author_nation %}
+        '{{ i.nation }}',
+        {% endfor %}]
+    },
+    series : [
+        {
+            name: '国籍',
+            type: 'pie',
+            radius : '55%',
+            center: ['50%', '60%'],
+            data:[
+            {% for i in author_nation %}
+
+            {value:{{ i.count }}, name:'{{ i.nation }}'},
+
+            {% endfor %}
+            ],
+            itemStyle: {
+                emphasis: {
+                    shadowBlur: 10,
+                    shadowOffsetX: 0,
+                    shadowColor: 'rgba(0, 0, 0, 0.5)'
+                }
             }
-        </script>
+        }
+    ]
+};
+;
+if (option && typeof option === "object") {
+    myChart.setOption(option, true);
+}
+       </script>
+
 
         <!-- page2图表 -->
 
@@ -1223,6 +1263,60 @@ if (option && typeof option === "object") {
     myChart.setOption(option, true);
 }
 </script>
+<!-- 弹出层结束 -->
+
+
+<!-- 作者国籍饼图 -->
+<script type="text/javascript">
+var dom = document.getElementById("p2_x1");
+var myChart = echarts.init(dom, 'walden');
+var app = {};
+option = null;
+option = {
+    title : {
+        x:'center'
+    },
+    tooltip : {
+        trigger: 'item',
+        formatter: "{a} <br/>{b} : {c} ({d}%)"
+    },
+    legend: {
+        orient: 'vertical',
+        left: 'left',
+        data: [
+        {% for i in author_nation %}
+        '{{ i.nation }}',
+        {% endfor %}]
+    },
+    series : [
+        {
+            name: '国籍',
+            type: 'pie',
+            radius : '55%',
+            center: ['50%', '60%'],
+            data:[
+            {% for i in author_nation %}
+
+            {value:{{ i.count }}, name:'{{ i.nation }}'},
+
+            {% endfor %}
+            ],
+            itemStyle: {
+                emphasis: {
+                    shadowBlur: 10,
+                    shadowOffsetX: 0,
+                    shadowColor: 'rgba(0, 0, 0, 0.5)'
+                }
+            }
+        }
+    ]
+};
+;
+if (option && typeof option === "object") {
+    myChart.setOption(option, true);
+}
+       </script>
+
 
 <!--折线图-->
 <script type="text/javascript">
@@ -1279,160 +1373,7 @@ if (option && typeof option === "object") {
         myChart.setOption(option, true);
     }
 </script>
-<!--嵌套环形图-->
-<script type="text/javascript">
-    var dom = document.getElementById("");
-    var myChart = echarts.init(dom,'walden');
-    var app = {};
-    option = null;
-    app.title = '嵌套环形图';
 
-    option = {
-        tooltip: {
-            trigger: 'item',
-            formatter: "{a} <br/>{b}: {c} ({d}%)"
-        },
-        legend: {
-            orient: 'vertical',
-            x: 'left',
-            data:['直达','营销广告','搜索引擎','邮件营销','联盟广告','视频广告','百度','谷歌','必应','其他']
-        },
-        series: [
-        {
-
-            type:'pie',
-            selectedMode: 'single',
-            radius: [0, '30%'],
-
-            label: {
-                normal: {
-                    position: 'inner'
-                }
-            },
-            labelLine: {
-                normal: {
-                    show: false
-                }
-            },
-            data:[
-            {value:335, name:'直达', selected:true},
-            {value:679, name:'营销广告'},
-            {value:1548, name:'搜索引擎'}
-            ]
-        },
-        {
-
-            type:'pie',
-            radius: ['40%', '55%'],
-            label: {
-                normal: {
-                    formatter: '{a|{a}}{abg|}\n{hr|}\n  {b|{b}：}{c}  {per|{d}%}  ',
-                    backgroundColor: '#eee',
-                    borderColor: '#aaa',
-                    borderWidth: 1,
-                    borderRadius: 4,
-                    // shadowBlur:3,
-                    // shadowOffsetX: 2,
-                    // shadowOffsetY: 2,
-                    // shadowColor: '#999',
-                    // padding: [0, 7],
-                    rich: {
-                        a: {
-                            color: '#999',
-                            lineHeight: 22,
-                            align: 'center'
-                        },
-                        // abg: {
-                        //     backgroundColor: '#333',
-                        //     width: '100%',
-                        //     align: 'right',
-                        //     height: 22,
-                        //     borderRadius: [4, 4, 0, 0]
-                        // },
-                        hr: {
-                            borderColor: '#aaa',
-                            width: '100%',
-                            borderWidth: 0.5,
-                            height: 0
-                        },
-                        b: {
-                            fontSize: 16,
-                            lineHeight: 33
-                        },
-                        per: {
-                            color: '#eee',
-                            backgroundColor: '#334455',
-                            padding: [2, 4],
-                            borderRadius: 2
-                        }
-                    }
-                }
-            },
-            data:[
-            {value:335, name:'直达'},
-            {value:310, name:'邮件营销'},
-            {value:234, name:'联盟广告'},
-            {value:135, name:'视频广告'},
-            {value:1048, name:'百度'},
-            {value:251, name:'谷歌'},
-            {value:147, name:'必应'},
-            {value:102, name:'其他'}
-            ]
-        }
-        ]
-    };;
-    if (option && typeof option === "object") {
-        myChart.setOption(option, true);
-    }
-</script>
-<!--作者国籍雷达图-->
-<script type="text/javascript">
-    var dom = document.getElementById("p2_x1");
-    var myChart = echarts.init(dom,'walden');
-    var app = {};
-    option = null;
-    option = {
-        title: {text: '作者国籍雷达图'},
-        tooltip: {},
-        legend: {
-            x: 'left',
-            data: ['预算分配']
-        },
-        radar: {
-        // shape: 'circle',
-        name: {
-            textStyle: {
-                color: '#fff',
-                backgroundColor: '#999',
-                borderRadius: 3,
-                padding: [3, 5]
-            }
-        },
-        indicator: [
-        { name: '美国', max: 5000},
-        { name: '法国', max: 5000},
-        { name: '英国', max: 1000},
-        { name: '中国', max: 5000},
-        { name: '德国', max: 1000},
-        { name: '日本', max: 1000}
-        ]
-    },
-    series: [{
-        name: '预算 vs 开销（Budget vs spending）',
-        type: 'radar',
-        // areaStyle: {normal: {}},
-        data : [
-        {
-            value : [4604, 125, 465, 4108, 92, 284],
-            name : '作者数量'
-        }
-        ]
-    }]
-};;
-if (option && typeof option === "object") {
-    myChart.setOption(option, true);
-}
-</script>
 <!--编程语言柱状图-->
 <script type="text/javascript">
     var dom = document.getElementById("p2_s1");
@@ -1577,7 +1518,7 @@ if (option && typeof option === "object") {
         name: '{{ i.name }}',
         type: 'bar',
         label: seriesLabel,
-        data: {{ i.data }}
+        data: {{ i.data }} * 3
     },
     {% endfor %}
 
