--- a/learn/templates/index.html
+++ b/learn/templates/index.html
@@ -209,6 +209,103 @@
         left:10px;
         height:280px;
     }
+    #p3_s1{
+        position:absolute;
+        top:80px;
+        left:10px;
+        background: rgba(239, 247, 250, 1);
+        border-radius: 10px;
+        height:280px;
+    }
+    #p3_s11{
+        position:absolute;
+        top:0px;
+        left:0px;
+        background: rgba(239, 247, 250, 1);
+        border-radius: 10px;
+        height:350px;
+        width:380px;
+    }
+    #p3_s12{
+        position:absolute;
+        top:0px;
+        left:385px;
+        background: rgba(239, 247, 250, 1);
+        border-radius: 10px;
+        height:350px;
+        width:300px;
+    }
+    #p3_s2{
+        position:absolute;
+        background: rgba(239, 247, 250, 1);
+        border-radius: 10px;
+        top:80px;left:560px;
+        height:480px;
+        width:820px;
+    }
+    #p3_s3{
+        position: absolute;
+        top: 80px;
+        background: rgba(239, 247, 250, 1);
+        border-radius: 10px;
+        height:380px;
+    }
+    #p3_x1{
+        position:absolute;
+        background: rgba(239, 247, 250, 1);
+        border-radius: 10px;
+        top:370px;left:10px;
+        height:280px;
+    }
+    #p3_x2{
+        position:absolute;
+        background: rgba(239, 247, 250, 1);
+        border-radius: 10px;
+        top:570px;left:560px;
+        height:350px;
+        width:820px;
+    }
+    #p3_x3{
+        background: rgba(239, 247, 250, 1);
+        border-radius: 10px;
+        top:470px;
+        height:400px;
+    }
+    #p3_x2 #x2_1{
+        position:absolute;
+        background: rgba(239, 247, 250, 1);
+        border-radius: 10px;
+        left:0px;
+        top;0px;
+        height:320px;
+        width:400px;
+        z-index: 1;
+    }
+    #p3_x2 #x2_2{
+        position:absolute;
+        background: rgba(239, 247, 250, 1);
+        border-radius: 10px;
+        left:410px;
+        height:320px;
+        width:400px;
+    }
+    #p3_x2 #x2_3{
+        position:absolute;
+        background: rgba(239, 247, 250, 1);
+        border-radius: 10px;
+        left:520px;
+        height:320px;
+        width:265px;
+    }
+    #p3_z1{
+        position:absolute;
+        background: rgba(239, 247, 250, 1);
+        border-radius: 10px;
+        top:660px;
+        left:10px;
+        height:280px;
+    }
+
 
     /*button {
         border-radius: 10px;
@@ -254,7 +351,7 @@
                 <div class="homepage-banner">
                     <div class="animation-container">
                         <div class="logo">
-                            <p align="value" style="position:absolute;top:18%;left: 28%"><img src="../../static/img/title.png" width="60%" height="60%"></p>
+                            <p align="value" style="position:absolute;top:18%;left: 25%"><img src="../../static/img/title.png" width="65%" height="65%"></p>
                             <p style="position:absolute;top:0px;"><img src="../../static/img/title_img.png"></p>
                             <p style="position:absolute;top:5px;left:15px;"><img src="../../static/img/logo.png" width="70%" height="70%"></p>
                             <p style="position:absolute;top:-1px;right:15px;"><img src="../../static/img/cata.png" width="70%">
@@ -266,11 +363,10 @@
                         <video autoplay loop class="fillScreen" width="100%" poster="../../static/img/static.png">
                             <source src="../../static/fonts/satellite.mp4" type="video/mp4"/>
                             <source src="../../static/fonts/satellite.webm" type="video/webm"/>
-                            Please upgrade your browser, it does not support the video tag.
                         </video>
 
                     </div>
-                    <div class="textdown"><p align="value" style="color:white;">基于豆瓣用户对读书条目的评分、标记和评价 (统计截至2019-4-1)</p>
+                    <div class="textdown" style="position: absolute;top: 90%;left: 38%; width: 70%; height: 20px; color:white;"><p align="value" style="position: absolute;height: 20px; color:white;">基于豆瓣用户对读书条目的评分、标记和评价 (统计截至2019-4-1)</p>
                     </div>
 
                 </div>
@@ -412,21 +508,133 @@
 
             </div>
 
-            <div id="page3" class="page" style="position:relative;background-image:url('https://img1.doubanio.com/view/activity_page/raw/public/p3819.jpg');" >
-                {% block grid %} {% endblock %}
-                <div id="p3_index" style="position:relative;top:80px;left:600px; height:800px; width:800px; background-color: rgba(103, 86, 86, 0.5);">
-                    <p style="prosition:absolute;color:#fff;font-size:24px;">所有图书信息</p>
-                    <div style="prosition:abosolute;background-color: rgba(103, 86, 86, 0.85);">
+            <div id="page3" class="page" style="position:relative;" >
+                <div class="md-modal md-effect-1" id="modal-p3-1">
+                    <div class="md-content" style="position:absolute;width:100%;height:100%;">
+                        <div class="md-content" style="position:absolute;width:100%;height:100%;min-height:500px;background: rgba(0,0,0,0.5);">
+                            <div style="position:relative;left:20%;width:60%;height:800px;">
+                                <h3>编程语言历年书本数目统计</h3>
+                                <div  id="p3_s1_show" style="position:relative;left:10%;width:80%;height:80%">
+                                </div>
+                                <button class="md-close" style="position: relative;border-radius: 10px;font-size: 0.1em;background: #c0392b;">Close</button>
+                            </div>
 
-                        <p style="position:absolute;left:30px;"><img src="https://img1.doubanio.com/view/subject/m/public/s32281237.jpg" style="width:115px;height:172px"></p>
-                        <div id="title">
-                            <p style="position:absolute;left;500px;font-size:18px;color:#fff;">标题</p>
                         </div>
 
                     </div>
                 </div>
-                <div  class="page_content">
+
+                <div class="md-modal md-effect-1" id="modal-p3-2">
+                    <div class="md-content" style="position:absolute;width:100%;height:100%;">
+                        <div class="md-content" style="position:absolute;width:100%;height:100%;min-height:500px;background: rgba(0,0,0,0.5);">
+                            <div style="position:relative;left:20%;width:60%;height:85%;">
+                                <h3>历年热门标签占比</h3>
+                                <div  id="p3_s2_show" style="position:relative;left:10%;width:80%;height:80%">
+
+                                </div>
+                                
+                            </div>
+                            <button class="md-close" style="position: relative;border-radius: 10px;font-size: 0.1em;background: #c0392b;">Close</button>
+                        </div>
+
+                    </div>
                 </div>
+                <div class="md-modal md-effect-1" id="modal-p3-3">
+                    <div class="md-content" style="position:absolute;width:100%;height:100%;">
+                        <div class="md-content" style="position:absolute;width:100%;height:100%;min-height:500px;background: rgba(0,0,0,0.5);">
+                            <div style="position:relative;left:20%;width:60%;height:800px;">
+                                <h3>作者国籍占比饼图</h3>
+                                <div  id="p3_x1_show" style="position:relative;left:10%;width:80%;height:80%"></div>
+                            </div>
+                            <button class="md-close" style="position: relative;border-radius: 10px;font-size: 0.1em;background: #c0392b;">Close</button>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="md-modal md-effect-1" id="modal-p3-4">
+                    <div class="md-content" style="position:absolute;width:100%;height:100%;">
+                        <div class="md-content" style="position:absolute;width:100%;height:100%;min-height:500px;background: rgba(0,0,0,0.5);">
+                            <div style="position:relative;left:20%;width:60%;height:800px;">
+                                <h3>作者国籍雷达图</h3>
+                                <div  id="p3_z1_show" style="position:relative;left:10%;width:80%;height:80%"></div>
+                                
+                            </div>
+                            <button class="md-close" style="position: relative;border-radius: 10px;font-size: 0.1em;background: #c0392b;">Close</button>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="md-modal md-effect-1" id="modal-p3-5">
+                    <div class="md-content" style="position:absolute;width:100%;height:100%;">
+                        <div class="md-content" style="position:absolute;width:100%;height:100%;min-height:500px;background: rgba(0,0,0,0.5);">
+                            <div style="position:relative;left:20%;width:60%;height:800px;">
+                                <h3>不同评分下基本信息对比</h3>
+                                <div  id="p3_x2_show" style="position:relative;left:10%;width:80%;height:80%"></div>
+                                
+                            </div>
+                            <button class="md-close" style="position: relative;border-radius: 10px;font-size: 0.1em;background: #c0392b;">Close</button>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="md-modal md-effect-1" id="modal-p3-6">
+                    <div class="md-content" style="position:absolute;width:100%;height:100%;">
+                        <div class="md-content" style="position:absolute;width:100%;height:100%;min-height:500px;background: rgba(0,0,0,0.5);">
+                            <div style="position:relative;left:20%;width:60%;height:800px;">
+                                <h3>不同评分下已读、想读、在读人数</h3>
+                                <div  id="p3_x3_show" style="position:relative;left:10%;width:80%;height:80%"></div>
+                                
+                            </div>
+                            <button class="md-close" style="position: relative;border-radius: 10px;font-size: 0.1em;background: #c0392b;">Close</button>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="container" style="position:absolute;width:100%;height:100%;">
+                    <div class="column" style="position:absolute;top:9%;left:25%;">
+                        <button class="md-trigger" data-modal="modal-p3-1" style="position:absolute;background: #848FFD;border-radius: 10px;font-size: 0.005em;z-index: 1000;">Show</button>
+                    </div>
+                    <div class="column" style="position:absolute;top:9%;left:68%;">
+                        <button class="md-trigger" data-modal="modal-p3-2" style="position:absolute;background: #848FFD;border-radius: 10px;font-size: 0.05em;z-index: 1000;">Show</button>
+                    </div>
+                    <div class="column" style="position:absolute;top:40%;left:25%;">
+                        <button class="md-trigger" data-modal="modal-p3-3" style="position:absolute;background: #848FFD;border-radius: 10px;font-size: 0.05em;z-index: 1000;">Show</button>
+                    </div>
+                    <div class="column" style="position:absolute;top:72%;left:25%;">
+                        <button class="md-trigger" data-modal="modal-p3-4" style="position:absolute;background: #848FFD;border-radius: 10px;font-size: 0.05em;z-index: 1000;">Show</button>
+                    </div>
+                    <div class="column" style="position:absolute;top:61%;left:68%;">
+                        <button class="md-trigger" data-modal="modal-p3-5" style="position:absolute;background: #848FFD;border-radius: 10px;font-size: 0.05em;z-index: 1000;">Show</button>
+                    </div>
+                    <div class="column" style="position:absolute;top:52%;left:96%;">
+                        <button class="md-trigger" data-modal="modal-p3-6" style="position:absolute;background: #848FFD;border-radius: 10px;font-size: 0.05em;z-index: 1000;">Show</button>
+                    </div>
+                </div>
+
+                <p style="position:absolute;top:2%;right:83%;"><img src="../../static/img/数据分析2.png"></p>
+                <p style="position:absolute;top:10px;right:350px"><img width="80%" height="80%" src="../../static/img/全部数据.png"></p>
+                <p style="position:absolute;top:10px;right:50px"><img width="80%" height="80%" src="../../static/img/有效数据.png"></p>
+                <div id="p3_s1" class="left">
+
+                </div>
+
+                <div id="p3_s2">  </div>
+                <div id="p3_s3" class="right">  </div>
+                <div id="p3_x1" class="left">  </div>
+                <div id="p3_x2">
+                    <div id="x2_1">
+
+                    </div>
+                    <div id="x2_2">
+
+                    </div>
+                    <div id="x2_3">
+
+                    </div>
+                </div>
+                <div id="p3_x3" class="right">  </div>
+                <div id="p3_z1" class="left">  </div>
+
             </div>
 
             <div id="page4" class="page" style="position:relative;background-image:url('https://img1.doubanio.com/view/activity_page/raw/public/p3819.jpg');">
@@ -545,7 +753,7 @@
         yAxis: {
             type: 'category',
             inverse: true,
-            data: ['00-09', '10-15', '15-19'],
+            data: ['00-09', '10-14', '15-19'],
             axisLabel: {
                 formatter: function (value) {
                     return value;
@@ -1050,6 +1258,47 @@ if (option && typeof option === "object") {
 
 
 <!-- 弹出层结束 -->
+<script type="text/javascript">
+var dom = document.getElementById("p3_s2");
+var myChart = echarts.init(dom, 'walden');
+var app = {};
+option = null;
+option = {
+    tooltip : {
+                trigger: 'axis',
+        axisPointer : {            // 坐标轴指示器，坐标轴触发有效
+            type : 'shadow'        // 默认为直线，可选为：'line' | 'shadow'
+        }
+    },
+    legend: {
+        data: [
+        {% for i in score_index %}
+        '{{ i.basic }}',
+        {% endfor %}
+        ]
+    },
+    xAxis: {
+        type: 'category',
+        data: ['4分以下','4-5分','5-6分','6-7分','7-8分','8-9分','9分以上']
+    },
+    yAxis: {
+        type: 'value'
+    },
+    series: [
+        {% for i in score_index%}
+        {   
+            name: '{{ i.basic }}',
+            type:'line',
+            data:{{ i.data }},
+            smooth: true
+        },
+        {% endfor %}]
+};
+;
+if (option && typeof option === "object") {
+    myChart.setOption(option, true);
+}
+       </script>
         <script type="text/javascript">
 
             var chart = echarts.init(document.getElementById('p2_s3'),'walden');
@@ -1213,7 +1462,7 @@ if (option && typeof option === "object") {
 
     <!--堆积柱状图-->
     <script type="text/javascript">
-        var dom = document.getElementById("p2_x2");
+        var dom = document.getElementById("p3_x2");
         var myChart = echarts.init(dom,'walden');
         var app = {};
         option = null;
@@ -1229,7 +1478,7 @@ if (option && typeof option === "object") {
     legend: {
         data: [
         {% for i in score_index %}
-        '{{ i.name }}',
+        '{{ i.basic }}',
         {% endfor %}
         ]
     },
@@ -1249,7 +1498,7 @@ if (option && typeof option === "object") {
     series: [
     {% for i in score_index%}
     {
-        name:'{{ i.name }}',
+        name:'{{ i.basic }}',
         type:'bar',
         stack: '总量',
         label: {
@@ -1280,6 +1529,7 @@ var app = {};
 option = null;
 option = {
     title : {
+        text:'作者国籍分布',
         x:'center'
     },
     tooltip : {
@@ -1326,7 +1576,7 @@ if (option && typeof option === "object") {
 
 <!--折线图-->
 <script type="text/javascript">
-    var dom = document.getElementById("p2_x3");
+    var dom = document.getElementById("");
     var myChart = echarts.init(dom,'walden');
     var app = {};
     option = null;
@@ -1428,7 +1678,6 @@ if (option && typeof option === "object") {
         },
         xAxis: {
             type: 'value',
-            name: 'Days',
             axisLabel: {
                 formatter: '{value}'
             }
@@ -1436,7 +1685,7 @@ if (option && typeof option === "object") {
         yAxis: {
             type: 'category',
             inverse: true,
-            data: ['00-09', '10-15', '15-19'],
+            data: ['00-09', '10-14', '15-19'],
             axisLabel: {
                 formatter: function (value) {
                     return value;
@@ -1537,7 +1786,64 @@ if (option && typeof option === "object") {
     myChart.setOption(option, true);
 }
 </script>
+<!-- 出版社 -->
 
+<script type="text/javascript">
+var dom = document.getElementById("p2_x2");
+var myChart = echarts.init(dom, 'walden');
+var app = {};
+option = null;
+app.title = '坐标轴刻度与标签对齐';
+
+option = {
+    color: ['#3398DB'],
+    tooltip : {
+        trigger: 'axis',
+        axisPointer : {            // 坐标轴指示器，坐标轴触发有效
+            type : 'shadow'        // 默认为直线，可选为：'line' | 'shadow'
+        }
+    },
+    grid: {
+        left: '3%',
+        right: '4%',
+        bottom: '3%',
+        containLabel: true
+    },
+    xAxis : [
+        {
+            type : 'category',
+            data : [
+            {% for i in Press_top %}    
+            '{{ i.name }}',
+            {% endfor %}],
+            axisTick: {
+                alignWithLabel: true
+            }
+        }
+    ],
+    yAxis : [
+        {
+            type : 'value'
+        }
+    ],
+    series : [
+        {
+            name:'出版书籍数：',
+            type:'bar',
+            barWidth: '60%',
+            data:[
+            {% for i in Press_top %}    
+            {{ i.data }},
+            {% endfor %}
+            ]
+        },
+    ]
+};
+;
+if (option && typeof option === "object") {
+    myChart.setOption(option, true);
+}
+       </script>
 <!--折线饼图-->
 <script type="text/javascript">
     var dom = document.getElementById("p2_s2");
